ignasr/ignasr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ignasr
  name: ignasr
  namespace: limdongjin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ignasr
  strategy: {}
  template:
    metadata:
      labels:
        app: ignasr
    spec:
      serviceAccountName: ignasr
      containers:
        - image: gcr.io/limdongjin-kube/ignasr:2.0
          name: ignasr
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 2
              memory: 4Gi
          ports:
            - containerPort: 8080
status: {}
