ignasr/ignasr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignasr
  namespace: limdongjin
  #annotations:
  #  cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
  #  cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: ignasr
spec:
  type: NodePort
  selector:
    app: ignasr
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
