ignasr/ignasr-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ignasr
  namespace: limdongjin
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ignasr-static-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: ignasr
      port:
        number: 80
